--- a/src/app/profile/profile.component.html
+++ b/src/app/profile/profile.component.html
@@ -1,6 +1,16 @@
 <!--Supposed to display my profile and repositories here-->
-<div class="card">
-    <div class="card-body">
-       <p>Ian Koech</p>
+<div class="jumbotron">
+    <h3>Github Search</h3>
+</div>
+<div class="container">
+    <div class="row">
+        <div class="col-md-6">
+            <!--Display my profile here-->
+            <p>Ian Koech</p>
+        </div>
+        <div class="col-md-6">
+            <app-github-form></app-github-form>
+            <div *ngIf="profile"></div>
+        </div>
     </div>
 </div>
