Completed service syntax

--- a/src/app/not-found/not-found.component.html
+++ b/src/app/not-found/not-found.component.html
@@ -1,1 +1,5 @@
-<p>not-found works!</p>
+<div class="jumbotron">
+    <img src="https://www.google.com/search?q=page+not+found+image&sxsrf=ALeKk00IvOixGT1Vp-gTk8CLLPqyQH0TiQ:1598979135945&tbm=isch&source=iu&ictx=1&fir=JPT257CYeJobEM%252C4MxwzZaCJ1wg3M%252C_&vet=1&usg=AI4_-kQUbkJMAuvYY3GXFoQ1X4QLL2rvng&sa=X&ved=2ahUKEwj-wpq7tcjrAhU05OAKHYyHCaoQ9QF6BAgMEBw#imgrc=JPT257CYeJobEM" alt="not found" width="400px" height="auto">
+    <p>Sorry, the page was not found due to a wrong URL</p>
+    <small>Its not us , its you<img src="https://emojipedia-us.s3.dualstack.us-west-1.amazonaws.com/thumbs/120/samsung/261/smiling-face-with-smiling-eyes_1f60a.png" width="120px" height="auto"></small>
+</div>
