Added user profile selector

--- a/src/app/github-form/github-form.component.html
+++ b/src/app/github-form/github-form.component.html
@@ -4,7 +4,7 @@
             <div class="form-group">
                 <label for="personName">Enter the person's github user name:</label>
                 <br>
-                <input type="text" id="personName" placeholder="Github User name" name="personName" #personName="ngModel"  [(ngModel)]=personName>
+                <input type="text" id="personName" placeholder="Github User name" name="searchUser"  [(ngModel)]="searchUser">
                 <p></p>
             </div>
             
