--- a/src/app/profile/profile.component.html
+++ b/src/app/profile/profile.component.html
@@ -6,7 +6,7 @@
     <div class="row">
         <div class="col-md-6">
             <!--Display my profile here-->
-            <p>Ian Koech</p>
+            <app-user-info></app-user-info>
         </div>
         <div class="col-md-6">
             <app-github-form></app-github-form>
